objects/CS01_ImpCaseRT__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Cs to store the implementation cases record type id&apos;s</description>
    <fields>
        <fullName>Change_Request_Off_Cycle_Lock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Change Request Off Cycle Lock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Request_Off_Cycle_Unlock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Change Request Off Cycle Unlock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Request_Off_Cycle__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Change Request Off Cycle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Change_Request_Off_Cycle_Lock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LG Change Request Off Cycle Lock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Change_Request_Off_Cycle_Unlock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LG Change Request Off Cycle Unlock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Change_Request_Off_Cycle__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LG Change Request Off Cycle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Full_Group_Term_Lock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LG Full Group Term Lock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Full_Group_Term_ReadOnly__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LG Full Group Term ReadOnly</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Full_Group_Term_Unlock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LG Full Group Term Unlock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Full_Group_Term__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LG Full Group Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Labor_and_Trust__c</fullName>
        <description>This will hold the Id of LG Labor and Trust Record Type on Implementation Case.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>LG Labor and Trust</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Local_and_National_Change_Request_Off__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LG Local and National Change Request Off</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Local_and_National_Pre_Work_ReadOnly__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LG Local and National Pre Work ReadOnly</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Local_and_National_Renewals_ReadOnly__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LG Local and National Renewals ReadOnly</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_New_Business_Lock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LG New Business Lock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_New_Business_ReadOnly__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LG New Business ReadOnly</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_New_Business_Unlock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LG New Business Unlock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_New_Business__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LG New Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Pre_Work_Lock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LG Pre Work Lock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Pre_Work_Unlock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LG Pre Work Unlock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Pre_Work__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LG Pre Work</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Renewal_Lock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LG Renewal Lock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Renewals__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LG Renewals</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Renwal_Unlock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LG Renwal Unlock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_and_National_Change_Request_Off_Cy__c</fullName>
        <description>Local and National Change Request Off Cycle ReadOnly RT Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Local and National Change Request Off Cy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_and_National_Pre_Work_ReadOnly__c</fullName>
        <description>Local and National Pre Work ReadOnly record type id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Local and National Pre Work ReadOnly</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_and_National_Renewals_ReadOnly__c</fullName>
        <description>Local and National Renewals ReadOnly RT Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Local and National Renewals ReadOnly</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Business_Lock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Business Lock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Business_ReadOnly__c</fullName>
        <description>New Business ReadOnly RT Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>New Business ReadOnly</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Business_Unlock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Business Unlock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Business__c</fullName>
        <description>New Business RT Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>New Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreWork_RFP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PreWork RFP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Work_Lock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pre Work Lock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Work_Unlock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pre Work Unlock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Work__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pre Work</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Read_Only__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Read Only</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_SME_And_Imp_Lock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Project SME And Imp Lock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_SME_And_Imp_Unlock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Project SME And Imp Unlock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_SME__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Project SME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Lock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Renewal Lock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewals__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Renewals</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renwal_Unlock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Renwal Unlock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CS01_ImpCaseRT</label>
</CustomObject>